fixing an icon that is not working on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,5 +92,11 @@
   .nuxt-yeerlo-wrapper .yrl-card {
     min-width: 345px !important;
   
-}
+  }
+
+  .yrl-icon-button {
+    font-size: 20px !important;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
